# claude-rust

./: .gitignore  Cargo.toml  PRODUCTION_ROADMAP.md  README.md  build_errors.txt  inf_errors.txt  inf_errors_utf8.txt  tui_errors.txt  tui_errors_utf8.txt
.github/workflows/: cargo-audit.yml  ci.yml
configs/: model_config.yaml  training_config.yaml
crates/claude-core/: Cargo.toml
crates/claude-core/src/: attention.rs  config.rs  kv_cache.rs  layer_norm.rs  lib.rs  rotary.rs  safetensors_util.rs  transformer.rs
crates/claude-tui/: Cargo.toml
crates/claude-tui/src/: app.rs  event.rs  main.rs  ui.rs
crates/inference/: Cargo.toml
crates/inference/src/: generator.rs  kv_cache.rs  lib.rs  main.rs  sampling.rs
crates/quant/: Cargo.toml
crates/retrieval/: Cargo.toml
crates/retrieval/src/: lib.rs
crates/tensors/: Cargo.toml
crates/tokenizer/: Cargo.toml
crates/tokenizer/src/: bpe.rs  error.rs  lib.rs  trainer.rs  vocab.rs
crates/trainer/: Cargo.toml
crates/trainer/src/: dataset.rs  lib.rs  main.rs  train.rs
crates/utils/: Cargo.toml
data/: claude_system_prompts.txt
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  TRAINING_GUIDE.md
scripts/: train_tokenizer.ps1
target_alt/: .rustc_info.json
target_alt/debug/.fingerprint/aho-corasick-1aaa353ec7c4e140/: lib-aho_corasick  lib-aho_corasick.json
target_alt/debug/.fingerprint/anstyle-f920eadd8d89d859/: lib-anstyle  lib-anstyle.json
target_alt/debug/.fingerprint/anstyle-parse-d7a73ab145855f11/: lib-anstyle_parse  lib-anstyle_parse.json
target_alt/debug/.fingerprint/anstyle-query-bec3a2573aa34bbe/: lib-anstyle_query  lib-anstyle_query.json
target_alt/debug/.fingerprint/anstyle-wincon-cf5d087acfc4ac28/: lib-anstyle_wincon  lib-anstyle_wincon.json
target_alt/debug/.fingerprint/anyhow-2a6bdd723155215e/: build-script-build-script-build  build-script-build-script-build.json
target_alt/debug/.fingerprint/colorchoice-4b24ae884ed0c61e/: lib-colorchoice  lib-colorchoice.json
target_alt/debug/.fingerprint/crossbeam-utils-4e73806b73e5796f/: build-script-build-script-build  build-script-build-script-build.json
target_alt/debug/.fingerprint/crossbeam-utils-9cd4567eacdceda6/: run-build-script-build-script-build  run-build-script-build-script-build.json
target_alt/debug/.fingerprint/crossbeam-utils-c02cea744938a889/: lib-crossbeam_utils  lib-crossbeam_utils.json
target_alt/debug/.fingerprint/heck-982ab7e758efd4fb/: lib-heck  lib-heck.json
target_alt/debug/.fingerprint/is_terminal_polyfill-ff52d0977402d667/: lib-is_terminal_polyfill  lib-is_terminal_polyfill.json
target_alt/debug/.fingerprint/memchr-ab590ebd4843aa64/: lib-memchr  lib-memchr.json
target_alt/debug/.fingerprint/once_cell_polyfill-b465f34a3460f13f/: lib-once_cell_polyfill  lib-once_cell_polyfill.json
tools/data_prep/: Cargo.toml
tools/data_prep/src/: main.rs
tools/tokenizer_cli/: Cargo.toml
tools/tokenizer_cli/src/: main.rs
(+46 files in other folders)
