[package]
name = "claude_core"
version = "0.1.0"
edition = "2021"

[dependencies]
tch = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
indoc = "2.0" 
safetensors = { workspace = true }
memmap2 = { workspace = true }
