[package]
name = "inference"
version = "0.1.0"
edition = "2021"

[dependencies]
tch = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
claude_core = { path = "../claude-core" }
axum = "0.6"
serde = { workspace = true }
serde_json = { workspace = true }
tokenizer = { path = "../tokenizer" }
tokio = { workspace = true }
futures = "0.3"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lib]
name = "inference"
path = "src/lib.rs"

[[bin]]
name = "inference-server"
path = "src/main.rs"
